# HPC-PDAJ-2023

./: README.md
Vezbe 1/: zadatak.rs
Vezbe 1/projekat1/: Cargo.toml
Vezbe 1/ws_projekat/: Cargo.toml
Vezbe 1/ws_projekat/biblioteka/: Cargo.toml
Vezbe 1/ws_projekat/biblioteka/src/: lib.rs
Vezbe 1/ws_projekat/projekat/: Cargo.toml
Vezbe 1/ws_projekat/projekat/src/: main.rs
Vezbe 2/cas_2/: Cargo.toml
Vezbe 2/cas_2/src/: collection.rs  compound_type.rs  control_flow.rs  function.rs  main.rs  variable.rs
Vezbe 2/cas_2/src/collection/: hashMap.rs  vector.rs
Vezbe 2/cas_2/src/compound_type/: array.rs  tuple.rs
Vezbe 3/cas_3/: Cargo.toml
Vezbe 3/cas_3/src/: main.rs
Vezbe 5/generic/vezbe5/: Cargo.toml  proba.txt
Vezbe 5/generic/vezbe5/src/: duplicate.rs  generic.rs  main.rs  read_file.rs  struct_generic.rs  trait_struct.rs
Vezbe 6/closure_iterator/: Cargo.toml
Vezbe 6/closure_iterator/src/: closure.rs
Vezbe 6/smart_pointers/src/: binary_tree.rs  linked_list.rs  linked_list_2.rs  main.rs
Vezbe 7/closure_iterator/src/: closure_and_ref.rs  closure_fn.rs  iterator.rs  main.rs
Vezbe 9/niti/: Cargo.toml
Vezbe 9/niti/src/: channel.rs  main.rs  mutex.rs
